[gd_scene load_steps=6 format=3 uid="uid://db07m7ctkl7x1"]

[ext_resource type="Script" path="res://redDrone.gd" id="1_lsrtv"]
[ext_resource type="Texture2D" uid="uid://hv6m2mpjrh6t" path="res://icon.svg" id="2_ejn2i"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r28yn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ejn2i")
}],
"loop": true,
"name": &"Flying",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcvom"]
size = Vector2(88, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uoq6"]
size = Vector2(499.75, 253.375)

[node name="redDrone" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_mask = 3
script = ExtResource("1_lsrtv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.8147e-06, -0.999996)
scale = Vector2(0.6875, 0.234375)
sprite_frames = SubResource("SpriteFrames_r28yn")
animation = &"Flying"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_rcvom")
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0.5, 31.3125)
shape = SubResource("RectangleShape2D_3uoq6")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 15)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5

[node name="StunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
